// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stake matches manual staking page 1`] = `
<DocumentFragment>
  <article
    class="page"
  >
    <div
      class="container grid"
    >
      <header
        class="header"
      >
        <div
          class="titleWrapper"
        >
          <h1
            class="title"
          >
            Stake
          </h1>
        </div>
        <a
          class="button small primary"
          href="/rewards"
        >
          Withdraw all rewards
        </a>
      </header>
      <section
        class="main"
      >
        <div
          class="col"
          style="flex: 1;"
        >
          <article
            class="card default"
          >
            <section
              class="main"
            >
              <article
                class="horizontal"
              >
                <div
                  class="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PaymentsOutlinedIcon"
                    focusable="false"
                    style="font-size: 56px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
                    />
                  </svg>
                </div>
                <section
                  class="main"
                >
                  <h1
                    class="title"
                  >
                    Staking rewards
                  </h1>
                  <div
                    class="grid"
                    style="gap: 8px;"
                  >
                    <p>
                      Stake native tokens and earn rewards
                    </p>
                  </div>
                </section>
              </article>
            </section>
          </article>
          <div
            class="tabsContainer"
          >
            <section
              class="tabs page"
            >
              <button
                class="tab"
                type="button"
              >
                <div
                  class="title"
                >
                  Quick Stake
                </div>
                <span
                  class="inline start"
                  style="gap: 4px;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit muted css-1vooibu-MuiSvgIcon-root"
                    data-testid="HelpOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="tab active"
                type="button"
              >
                <div
                  class="title"
                >
                  Manual Stake
                </div>
              </button>
            </section>
            <div
              class="content"
            >
              <article
                class="page sub"
              >
                <div
                  class="container grid"
                >
                  <section
                    class="main"
                  >
                    <div
                      class="grid"
                      style="gap: 0;"
                    >
                      <div
                        class="wrapper search"
                      >
                        <input
                          autocomplete="off"
                          class="input"
                          inputmode="search"
                          placeholder="Search for validator..."
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
                          data-testid="SearchIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                          />
                        </svg>
                      </div>
                      <div
                        class="chainfilter__out"
                      >
                        <div
                          class="filter header"
                        >
                          <div
                            class="pills"
                          >
                            <button
                              aria-expanded="false"
                              class="button"
                            >
                              + 5
                            </button>
                          </div>
                        </div>
                        <div
                          class="content"
                        >
                          <article
                            class="page invisible"
                          >
                            <div
                              class="container grid"
                            >
                              <section
                                class="main"
                              >
                                <section
                                  class="table"
                                >
                                  <button
                                    class="toggle"
                                  >
                                    <span
                                      class="track"
                                    >
                                      <span
                                        class="indicator"
                                      />
                                    </span>
                                    <span
                                      class="text"
                                    >
                                      Show inactive validators
                                    </span>
                                  </button>
                                  <div
                                    class="container"
                                  >
                                    <table
                                      class="table default"
                                    >
                                      <thead>
                                        <tr>
                                          <th
                                            class=""
                                          >
                                            <button
                                              class="sorter"
                                            >
                                              Moniker
                                              <div
                                                class="grid"
                                                style="gap: 4px;"
                                              >
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropUp.svg
                                                </svg>
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropDown.svg
                                                </svg>
                                              </div>
                                            </button>
                                          </th>
                                          <th
                                            class="right"
                                          >
                                            <button
                                              class="sorter"
                                            >
                                              Voting power
                                              <div
                                                class="grid"
                                                style="gap: 4px;"
                                              >
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropUp.svg
                                                </svg>
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropDown.svg
                                                </svg>
                                              </div>
                                            </button>
                                          </th>
                                          <th
                                            class="right"
                                          >
                                            <button
                                              class="sorter"
                                            >
                                              Commission
                                              <div
                                                class="grid"
                                                style="gap: 4px;"
                                              >
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropUp.svg
                                                </svg>
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropDown.svg
                                                </svg>
                                              </div>
                                            </button>
                                          </th>
                                        </tr>
                                      </thead>
                                      <tbody>
                                        <tr>
                                          <td
                                            class=""
                                          >
                                            <div
                                              class="flex start"
                                              style="gap: 8px;"
                                            >
                                              <img
                                                alt=""
                                                class="icon"
                                                height="22"
                                                src="https://raw.githubusercontent.com/terra-money/validator-images/main/images/0A6AF02D1557E5B4.jpg"
                                                width="22"
                                              />
                                              <div
                                                class="grid"
                                                style="gap: 2px;"
                                              >
                                                <div
                                                  class="flex start"
                                                  style="gap: 4px;"
                                                >
                                                  <a
                                                    class="moniker"
                                                    href="/validator/terravaloper1fzx6z3qlwjyjjt3e5q6sakvt74n08uq9alzae3"
                                                  >
                                                    polkachu.com
                                                  </a>
                                                </div>
                                              </div>
                                            </div>
                                          </td>
                                          <td
                                            class="right"
                                          >
                                            100.00%
                                          </td>
                                          <td
                                            class="right"
                                          >
                                            5.00%
                                          </td>
                                        </tr>
                                        <tr>
                                          <td
                                            class=""
                                          >
                                            <div
                                              class="flex start"
                                              style="gap: 8px;"
                                            >
                                              <img
                                                alt=""
                                                class="icon"
                                                height="22"
                                                src="https://raw.githubusercontent.com/terra-money/validator-images/main/images/F2F91999ECCC092F.jpg"
                                                width="22"
                                              />
                                              <div
                                                class="grid"
                                                style="gap: 2px;"
                                              >
                                                <div
                                                  class="flex start"
                                                  style="gap: 4px;"
                                                >
                                                  <a
                                                    class="moniker"
                                                    href="/validator/junovaloper1qns2cgfa0y0s4x37vkd8dtkutj5kveekxpf6jd"
                                                  >
                                                    🔥STAVR🔥
                                                  </a>
                                                </div>
                                              </div>
                                            </div>
                                          </td>
                                          <td
                                            class="right"
                                          >
                                            0.00%
                                          </td>
                                          <td
                                            class="right"
                                          >
                                            5.00%
                                          </td>
                                        </tr>
                                        <tr>
                                          <td
                                            class=""
                                          >
                                            <div
                                              class="flex start"
                                              style="gap: 8px;"
                                            >
                                              <img
                                                alt=""
                                                class="icon"
                                                height="22"
                                                src="https://raw.githubusercontent.com/terra-money/validator-images/main/images/BA19D70D1099E80E.jpg"
                                                width="22"
                                              />
                                              <div
                                                class="grid"
                                                style="gap: 2px;"
                                              >
                                                <div
                                                  class="flex start"
                                                  style="gap: 4px;"
                                                >
                                                  <a
                                                    class="moniker"
                                                    href="/validator/terravaloper1gtw2uxdkdt3tvq790ckjz8jm8qgwkdw3uptstn"
                                                  >
                                                    Terran One
                                                  </a>
                                                  <span
                                                    class="inline tag bg-danger small"
                                                  >
                                                    Jailed
                                                  </span>
                                                </div>
                                              </div>
                                            </div>
                                          </td>
                                          <td
                                            class="right"
                                          >
                                            0.00%
                                          </td>
                                          <td
                                            class="right"
                                          >
                                            0.00%
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </div>
                                </section>
                              </section>
                            </div>
                          </article>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </article>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Stake matches manual staking page with search 1`] = `
<DocumentFragment>
  <article
    class="page"
  >
    <div
      class="container grid"
    >
      <header
        class="header"
      >
        <div
          class="titleWrapper"
        >
          <h1
            class="title"
          >
            Stake
          </h1>
        </div>
        <a
          class="button small primary"
          href="/rewards"
        >
          Withdraw all rewards
        </a>
      </header>
      <section
        class="main"
      >
        <div
          class="col"
          style="flex: 1;"
        >
          <article
            class="card default"
          >
            <section
              class="main"
            >
              <article
                class="horizontal"
              >
                <div
                  class="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PaymentsOutlinedIcon"
                    focusable="false"
                    style="font-size: 56px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
                    />
                  </svg>
                </div>
                <section
                  class="main"
                >
                  <h1
                    class="title"
                  >
                    Staking rewards
                  </h1>
                  <div
                    class="grid"
                    style="gap: 8px;"
                  >
                    <p>
                      Stake native tokens and earn rewards
                    </p>
                  </div>
                </section>
              </article>
            </section>
          </article>
          <div
            class="tabsContainer"
          >
            <section
              class="tabs page"
            >
              <button
                class="tab"
                type="button"
              >
                <div
                  class="title"
                >
                  Quick Stake
                </div>
                <span
                  class="inline start"
                  style="gap: 4px;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit muted css-1vooibu-MuiSvgIcon-root"
                    data-testid="HelpOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="tab active"
                type="button"
              >
                <div
                  class="title"
                >
                  Manual Stake
                </div>
              </button>
            </section>
            <div
              class="content"
            >
              <article
                class="page sub"
              >
                <div
                  class="container grid"
                >
                  <section
                    class="main"
                  >
                    <div
                      class="grid"
                      style="gap: 0;"
                    >
                      <div
                        class="wrapper search"
                      >
                        <input
                          autocomplete="off"
                          class="input"
                          inputmode="search"
                          placeholder="Search for validator..."
                          value="Terran"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
                          data-testid="SearchIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                          />
                        </svg>
                      </div>
                      <div
                        class="chainfilter__out"
                      >
                        <div
                          class="filter header"
                        >
                          <div
                            class="pills"
                          >
                            <button
                              aria-expanded="false"
                              class="button"
                            >
                              + 5
                            </button>
                          </div>
                        </div>
                        <div
                          class="content"
                        >
                          <article
                            class="page invisible"
                          >
                            <div
                              class="container grid"
                            >
                              <section
                                class="main"
                              >
                                <section
                                  class="table"
                                >
                                  <button
                                    class="toggle"
                                  >
                                    <span
                                      class="track"
                                    >
                                      <span
                                        class="indicator"
                                      />
                                    </span>
                                    <span
                                      class="text"
                                    >
                                      Show inactive validators
                                    </span>
                                  </button>
                                  <div
                                    class="container"
                                  >
                                    <table
                                      class="table default"
                                    >
                                      <thead>
                                        <tr>
                                          <th
                                            class=""
                                          >
                                            <button
                                              class="sorter"
                                            >
                                              Moniker
                                              <div
                                                class="grid"
                                                style="gap: 4px;"
                                              >
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropUp.svg
                                                </svg>
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropDown.svg
                                                </svg>
                                              </div>
                                            </button>
                                          </th>
                                          <th
                                            class="right"
                                          >
                                            <button
                                              class="sorter"
                                            >
                                              Voting power
                                              <div
                                                class="grid"
                                                style="gap: 4px;"
                                              >
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropUp.svg
                                                </svg>
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropDown.svg
                                                </svg>
                                              </div>
                                            </button>
                                          </th>
                                          <th
                                            class="right"
                                          >
                                            <button
                                              class="sorter"
                                            >
                                              Commission
                                              <div
                                                class="grid"
                                                style="gap: 4px;"
                                              >
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropUp.svg
                                                </svg>
                                                <svg
                                                  class="caret"
                                                  height="3"
                                                  width="6"
                                                >
                                                  DropDown.svg
                                                </svg>
                                              </div>
                                            </button>
                                          </th>
                                        </tr>
                                      </thead>
                                      <tbody>
                                        <tr>
                                          <td
                                            class=""
                                          >
                                            <div
                                              class="flex start"
                                              style="gap: 8px;"
                                            >
                                              <img
                                                alt=""
                                                class="icon"
                                                height="22"
                                                src="https://raw.githubusercontent.com/terra-money/validator-images/main/images/BA19D70D1099E80E.jpg"
                                                width="22"
                                              />
                                              <div
                                                class="grid"
                                                style="gap: 2px;"
                                              >
                                                <div
                                                  class="flex start"
                                                  style="gap: 4px;"
                                                >
                                                  <a
                                                    class="moniker"
                                                    href="/validator/terravaloper1gtw2uxdkdt3tvq790ckjz8jm8qgwkdw3uptstn"
                                                  >
                                                    Terran One
                                                  </a>
                                                  <span
                                                    class="inline tag bg-danger small"
                                                  >
                                                    Jailed
                                                  </span>
                                                </div>
                                              </div>
                                            </div>
                                          </td>
                                          <td
                                            class="right"
                                          >
                                            0.00%
                                          </td>
                                          <td
                                            class="right"
                                          >
                                            0.00%
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </div>
                                </section>
                              </section>
                            </div>
                          </article>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </article>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Stake matches original component 1`] = `
<DocumentFragment>
  <article
    class="page"
  >
    <div
      class="container grid"
    >
      <header
        class="header"
      >
        <div
          class="titleWrapper"
        >
          <h1
            class="title"
          >
            Stake
          </h1>
        </div>
        <a
          class="button small primary"
          href="/rewards"
        >
          Withdraw all rewards
        </a>
      </header>
      <section
        class="main"
      >
        <div
          class="col"
          style="flex: 1;"
        >
          <article
            class="card default"
          >
            <section
              class="main"
            >
              <article
                class="horizontal"
              >
                <div
                  class="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PaymentsOutlinedIcon"
                    focusable="false"
                    style="font-size: 56px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
                    />
                  </svg>
                </div>
                <section
                  class="main"
                >
                  <h1
                    class="title"
                  >
                    Staking rewards
                  </h1>
                  <div
                    class="grid"
                    style="gap: 8px;"
                  >
                    <p>
                      Stake native tokens and earn rewards
                    </p>
                  </div>
                </section>
              </article>
            </section>
          </article>
          <div
            class="tabsContainer"
          >
            <section
              class="tabs page"
            >
              <button
                class="tab active"
                type="button"
              >
                <div
                  class="title"
                >
                  Quick Stake
                </div>
                <span
                  class="inline start"
                  style="gap: 4px;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit muted css-1vooibu-MuiSvgIcon-root"
                    data-testid="HelpOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="tab"
                type="button"
              >
                <div
                  class="title"
                >
                  Manual Stake
                </div>
              </button>
            </section>
            <div
              class="content"
            >
              <article
                class="page"
              >
                <div
                  class="container grid"
                >
                  <section
                    class="main"
                  >
                    <div
                      class="buttonfilter"
                    >
                      <div
                        class="header"
                      />
                      <div
                        class="actions"
                      >
                        <button
                          class="active"
                        >
                          Delegate
                        </button>
                        <button>
                          Undelegate
                        </button>
                      </div>
                      <div
                        class="content"
                      >
                        <article
                          class="card muted default"
                        >
                          <section
                            class="main"
                          >
                            <article
                              class="page small invisible"
                            >
                              <div
                                class="container grid"
                              >
                                <section
                                  class="main"
                                >
                                  <div
                                    class="chainfilter__out"
                                  >
                                    <div
                                      class="filter header"
                                    >
                                      <div
                                        class="pills"
                                      >
                                        <button
                                          aria-expanded="false"
                                          class="button"
                                        >
                                          + 5
                                        </button>
                                      </div>
                                    </div>
                                    <div
                                      class="content"
                                    >
                                      <article
                                        class="page invisible"
                                      >
                                        <div
                                          class="container grid"
                                        >
                                          <section
                                            class="main"
                                          >
                                            <form
                                              class="form undefined"
                                            >
                                              <div
                                                class="component warning"
                                              >
                                                <div
                                                  class="flex"
                                                >
                                                  <svg
                                                    aria-hidden="true"
                                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                                                    data-testid="InfoIcon"
                                                    focusable="false"
                                                    style="font-size: 18px;"
                                                    viewBox="0 0 24 24"
                                                  >
                                                    <path
                                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                                                    />
                                                  </svg>
                                                </div>
                                                <span>
                                                  Leave enough coins to pay fee for subsequent transactions
                                                </span>
                                              </div>
                                              <div
                                                class="grid"
                                                style="gap: 4px;"
                                              >
                                                <header
                                                  class="header"
                                                >
                                                  <label
                                                    class="label"
                                                  >
                                                    Amount
                                                  </label>
                                                  <aside
                                                    class="extra"
                                                  >
                                                    <button
                                                      class="muted"
                                                      type="button"
                                                    >
                                                      <div
                                                        class="flex start"
                                                        style="gap: 4px;"
                                                      >
                                                        <svg
                                                          aria-hidden="true"
                                                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit icon css-1vooibu-MuiSvgIcon-root"
                                                          data-testid="AccountBalanceWalletIcon"
                                                          focusable="false"
                                                          viewBox="0 0 24 24"
                                                        >
                                                          <path
                                                            d="M21 18v1c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2V5c0-1.1.89-2 2-2h14c1.1 0 2 .9 2 2v1h-9c-1.11 0-2 .9-2 2v8c0 1.1.89 2 2 2h9zm-9-2h10V8H12v8zm4-2.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
                                                          />
                                                        </svg>
                                                        <span
                                                          class="component"
                                                        >
                                                          1,002
                                                          <span
                                                            class="small"
                                                          >
                                                            .284039
                                                          </span>
                                                          <span
                                                            class="small"
                                                          >
                                                             LUNA
                                                          </span>
                                                        </span>
                                                      </div>
                                                    </button>
                                                  </aside>
                                                </header>
                                                <div
                                                  class="wrapper"
                                                >
                                                  <input
                                                    autocomplete="off"
                                                    class="input before"
                                                    inputmode="decimal"
                                                    name="input"
                                                    placeholder="0.000000"
                                                  />
                                                  <div
                                                    class="flex symbol after"
                                                  >
                                                    LUNA
                                                  </div>
                                                </div>
                                              </div>
                                              <div
                                                class="component"
                                              >
                                                <dl>
                                                  <dt
                                                    class="gas"
                                                  >
                                                    Fee
                                                  </dt>
                                                  <dd>
                                                    <span
                                                      class="component"
                                                    >
                                                      0
                                                      <span
                                                        class="small"
                                                      >
                                                        .006313
                                                      </span>
                                                      <span
                                                        class="small"
                                                      >
                                                         LUNA
                                                      </span>
                                                    </span>
                                                  </dd>
                                                  <dt>
                                                    Balance
                                                  </dt>
                                                  <dd>
                                                    <span
                                                      class="component"
                                                    >
                                                      1,002
                                                      <span
                                                        class="small"
                                                      >
                                                        .290352
                                                      </span>
                                                      <span
                                                        class="small"
                                                      >
                                                         LUNA
                                                      </span>
                                                    </span>
                                                  </dd>
                                                  <dt>
                                                    Balance after tx
                                                  </dt>
                                                  <dd>
                                                    <span
                                                      class="component"
                                                    >
                                                      1,002
                                                      <span
                                                        class="small"
                                                      >
                                                        .284039
                                                      </span>
                                                      <span
                                                        class="small"
                                                      >
                                                         LUNA
                                                      </span>
                                                    </span>
                                                  </dd>
                                                </dl>
                                              </div>
                                              <button
                                                aria-expanded="false"
                                                class="button small outline button"
                                                type="button"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                                  data-testid="AccountBalanceWalletIcon"
                                                  focusable="false"
                                                  style="font-size: 16px;"
                                                  viewBox="0 0 24 24"
                                                >
                                                  <path
                                                    d="M21 18v1c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2V5c0-1.1.89-2 2-2h14c1.1 0 2 .9 2 2v1h-9c-1.11 0-2 .9-2 2v8c0 1.1.89 2 2 2h9zm-9-2h10V8H12v8zm4-2.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
                                                  />
                                                </svg>
                                                <span
                                                  class="button__text"
                                                >
                                                  420829
                                                </span>
                                              </button>
                                            </form>
                                          </section>
                                        </div>
                                      </article>
                                    </div>
                                  </div>
                                </section>
                              </div>
                            </article>
                          </section>
                        </article>
                      </div>
                    </div>
                  </section>
                </div>
              </article>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Stake matches undelegate page 1`] = `
<DocumentFragment>
  <article
    class="page"
  >
    <div
      class="container grid"
    >
      <header
        class="header"
      >
        <div
          class="titleWrapper"
        >
          <h1
            class="title"
          >
            Stake
          </h1>
        </div>
        <a
          class="button small primary"
          href="/rewards"
        >
          Withdraw all rewards
        </a>
      </header>
      <section
        class="main"
      >
        <div
          class="col"
          style="flex: 1;"
        >
          <article
            class="card default"
          >
            <section
              class="main"
            >
              <article
                class="horizontal"
              >
                <div
                  class="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PaymentsOutlinedIcon"
                    focusable="false"
                    style="font-size: 56px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
                    />
                  </svg>
                </div>
                <section
                  class="main"
                >
                  <h1
                    class="title"
                  >
                    Staking rewards
                  </h1>
                  <div
                    class="grid"
                    style="gap: 8px;"
                  >
                    <p>
                      Stake native tokens and earn rewards
                    </p>
                  </div>
                </section>
              </article>
            </section>
          </article>
          <div
            class="tabsContainer"
          >
            <section
              class="tabs page"
            >
              <button
                class="tab active"
                type="button"
              >
                <div
                  class="title"
                >
                  Quick Stake
                </div>
                <span
                  class="inline start"
                  style="gap: 4px;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit muted css-1vooibu-MuiSvgIcon-root"
                    data-testid="HelpOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="tab"
                type="button"
              >
                <div
                  class="title"
                >
                  Manual Stake
                </div>
              </button>
            </section>
            <div
              class="content"
            >
              <article
                class="page"
              >
                <div
                  class="container grid"
                >
                  <section
                    class="main"
                  >
                    <div
                      class="buttonfilter"
                    >
                      <div
                        class="header"
                      />
                      <div
                        class="actions"
                      >
                        <button>
                          Delegate
                        </button>
                        <button
                          class="active"
                        >
                          Undelegate
                        </button>
                      </div>
                      <div
                        class="content"
                      >
                        <article
                          class="card muted default"
                        >
                          <section
                            class="main"
                          >
                            <article
                              class="page small invisible"
                            >
                              <div
                                class="container grid"
                              >
                                <section
                                  class="main"
                                >
                                  <div
                                    class="chainfilter__out"
                                  >
                                    <div
                                      class="filter header"
                                    >
                                      <div
                                        class="pills"
                                      >
                                        <button
                                          aria-expanded="false"
                                          class="button"
                                        >
                                          + 5
                                        </button>
                                      </div>
                                    </div>
                                    <div
                                      class="content"
                                    >
                                      <article
                                        class="page invisible"
                                      >
                                        <div
                                          class="container grid"
                                        >
                                          <section
                                            class="main"
                                          >
                                            <form
                                              class="form undefined"
                                            >
                                              <div
                                                class="grid"
                                                style="gap: 4px;"
                                              >
                                                <div
                                                  class="component warning"
                                                >
                                                  <div
                                                    class="flex"
                                                  >
                                                    <svg
                                                      aria-hidden="true"
                                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                                                      data-testid="InfoIcon"
                                                      focusable="false"
                                                      style="font-size: 18px;"
                                                      viewBox="0 0 24 24"
                                                    >
                                                      <path
                                                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                                                      />
                                                    </svg>
                                                  </div>
                                                  <span>
                                                    A maximum 7 undelegations can be in progress at the same time
                                                  </span>
                                                </div>
                                                <div
                                                  class="component warning"
                                                >
                                                  <div
                                                    class="flex"
                                                  >
                                                    <svg
                                                      aria-hidden="true"
                                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                                                      data-testid="InfoIcon"
                                                      focusable="false"
                                                      style="font-size: 18px;"
                                                      viewBox="0 0 24 24"
                                                    >
                                                      <path
                                                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                                                      />
                                                    </svg>
                                                  </div>
                                                  <span>
                                                    Undelegating funds do not accrue rewards and are locked for {{daysToUnbond}} days
                                                  </span>
                                                </div>
                                              </div>
                                              <div
                                                class="grid"
                                                style="gap: 4px;"
                                              >
                                                <header
                                                  class="header"
                                                >
                                                  <label
                                                    class="label"
                                                  >
                                                    Amount
                                                  </label>
                                                  <aside
                                                    class="extra"
                                                  >
                                                    <button
                                                      class="muted"
                                                      type="button"
                                                    >
                                                      <div
                                                        class="flex start"
                                                        style="gap: 4px;"
                                                      >
                                                        <svg
                                                          aria-hidden="true"
                                                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit icon css-1vooibu-MuiSvgIcon-root"
                                                          data-testid="AccountBalanceWalletIcon"
                                                          focusable="false"
                                                          viewBox="0 0 24 24"
                                                        >
                                                          <path
                                                            d="M21 18v1c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2V5c0-1.1.89-2 2-2h14c1.1 0 2 .9 2 2v1h-9c-1.11 0-2 .9-2 2v8c0 1.1.89 2 2 2h9zm-9-2h10V8H12v8zm4-2.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
                                                          />
                                                        </svg>
                                                        <span
                                                          class="component"
                                                        >
                                                          12
                                                          <span
                                                            class="small"
                                                          >
                                                            .899999
                                                          </span>
                                                        </span>
                                                      </div>
                                                    </button>
                                                  </aside>
                                                </header>
                                                <div
                                                  class="wrapper"
                                                >
                                                  <input
                                                    autocomplete="off"
                                                    class="input before"
                                                    inputmode="decimal"
                                                    name="input"
                                                    placeholder="0.000000"
                                                  />
                                                  <div
                                                    class="flex symbol after"
                                                  >
                                                    LUNA
                                                  </div>
                                                </div>
                                              </div>
                                              <div
                                                class="component"
                                              >
                                                <dl>
                                                  <dt
                                                    class="gas"
                                                  >
                                                    Fee
                                                  </dt>
                                                  <dd>
                                                    <span
                                                      class="component"
                                                    >
                                                      0
                                                      <span
                                                        class="small"
                                                      >
                                                        .006313
                                                      </span>
                                                      <span
                                                        class="small"
                                                      >
                                                         LUNA
                                                      </span>
                                                    </span>
                                                  </dd>
                                                  <dt>
                                                    Balance
                                                  </dt>
                                                  <dd>
                                                    <span
                                                      class="component"
                                                    >
                                                      12
                                                      <span
                                                        class="small"
                                                      >
                                                        .899999
                                                      </span>
                                                    </span>
                                                  </dd>
                                                  <dt>
                                                    Balance after tx
                                                  </dt>
                                                  <dd>
                                                    <span
                                                      class="component"
                                                    >
                                                      12
                                                      <span
                                                        class="small"
                                                      >
                                                        .899999
                                                      </span>
                                                    </span>
                                                  </dd>
                                                </dl>
                                              </div>
                                              <button
                                                aria-expanded="false"
                                                class="button small outline button"
                                                type="button"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                                  data-testid="AccountBalanceWalletIcon"
                                                  focusable="false"
                                                  style="font-size: 16px;"
                                                  viewBox="0 0 24 24"
                                                >
                                                  <path
                                                    d="M21 18v1c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2V5c0-1.1.89-2 2-2h14c1.1 0 2 .9 2 2v1h-9c-1.11 0-2 .9-2 2v8c0 1.1.89 2 2 2h9zm-9-2h10V8H12v8zm4-2.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
                                                  />
                                                </svg>
                                                <span
                                                  class="button__text"
                                                >
                                                  420829
                                                </span>
                                              </button>
                                            </form>
                                          </section>
                                        </div>
                                      </article>
                                    </div>
                                  </div>
                                </section>
                              </div>
                            </article>
                          </section>
                        </article>
                      </div>
                    </div>
                  </section>
                </div>
              </article>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;
